tests/semantic/fail/illegal_subscript2.c
int main(void) {
  int i;
  i[i]; // <-- subscripted value is not an array or pointer
  return 0;
}
